[project]
name = "comfyui_rs_nai_api_request"
description = "Generate NovelAI image and convert weight local to NAI or reverse ."
version = "1.0.6"
license = { file = "LICENSE" }
dependencies = [
    "python-dotenv>=0.21.0",
    "aiohttp>=3.8.4",
    "torch>=1.13.0",
    "numpy>=1.23.5",
    "Pillow>=9.3.0"
]

[project.urls]
Repository = "https://github.com/raspie10032/ComfyUI_RS_NAI_API_Request"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "raspie10032"
DisplayName = "ComfyUI_RS_NAI_API_Request"
Icon = ""
